<resources>
    <string name="app_name">Lastube</string>

    <string name="lostpassword"><a href="https://secure.last.fm/settings/lostpassword">Forgot your username or password?</a></string>
    <string name="join">Don‘t have a profile? <a href="https://secure.last.fm/join?next=/">Sign up for FREE</a></string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="scrobbling_now">Scrobbling now</string>
    <string name="scrobbles">Scrobbles</string>
    <string name="top_artists">Top Artists</string>
    <string name="top_albums">Top Albums</string>
    <string name="top_tracks">Top Tracks</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">LogIn</string>
    <string name="action_logout">LogOut</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="country">Country</string>
    <string name="scrobbling_since">scrobbling since</string>
    <string name="loved_tracks">Loved Tracks</string>
    <string name="top_tags">Top Tags</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_info">Info</string>
</resources>
