<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView android:id="@+id/thumbImage"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_menu_top_tracks"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title"/>

        <TextView android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:contentDescription="@string/subtitle"/>

        <TextView android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description" />

    </LinearLayout>

</LinearLayout>