<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp">

    <GridLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:columnOrderPreserved="true"
        android:padding="10dp">

        <ImageView android:id="@+id/avatar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@mipmap/ic_launcher"
                   android:contentDescription="@string/image"
                   android:layout_row="0"
                   android:layout_column="0"
                   android:layout_gravity="center|end"
                   android:padding="10dp"/>

        <TextView android:id="@+id/nick"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/action_login"
                  android:layout_row="0"
                  android:layout_column="1"
                  android:textStyle="bold"
                  android:padding="10dp"
                  android:gravity="center"
                  android:layout_gravity="center_vertical"/>

        <TextView android:id="@+id/country"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/country"
                  android:layout_column="1"
                  android:layout_row="1"
                  android:textStyle="bold"
                  android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scrobbling_since"
            android:layout_gravity="end"
            android:padding="10dp"/>

        <TextView android:id="@+id/reg_date"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scrobbles"
            android:layout_gravity="end"
            android:padding="10dp"/>

        <TextView android:id="@+id/playcount"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loved_tracks"
            android:layout_gravity="end"
            android:padding="10dp"/>

        <TextView android:id="@+id/loved_tracks_count"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_tags"
            android:layout_gravity="end"
            android:padding="10dp"/>

        <TextView android:id="@+id/top_tags_count"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:padding="10dp"/>

    </GridLayout>

</ScrollView>